--- a/LoveOpas/app/src/main/AndroidManifest.xml
+++ b/LoveOpas/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.acidbricks.products.loveopas">
+    package="com.acidbricks.projects.loveopas">
 
     <application
         android:allowBackup="true"
